gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test23047.d
version https://git-lfs.github.com/spec/v1
oid sha256:54434d50fd5ee5e00ce4566c674b711c29e56c4edb9d2acd5dda18e8dc8e9bca
size 218
